# prototype-c2

./: README.md
version_1_basic/c2_server/: c2_server copy.py  c2_server_v2.py
version_1_basic/implant-working/: a
version_1_basic/implant-working/src/: implant_details.rs  main.rs
version_2_posting_to_mysql/c2_server/: c2_server copy.py  c2_server_v2.py
version_2_posting_to_mysql/implant-working/: Cargo.toml
version_2_posting_to_mysql/implant-working/src/: fileoperations.rs  main.rs
version_3_GETs_and_POSTs/c2_server/: c2_app.py  test_POST.py
version_3_GETs_and_POSTs/implant-working/: Cargo.toml
version_3_GETs_and_POSTs/implant-working/src/: implant_details.rs
version_4_web_gui/c2_server/: c2_gui.py  c2_server.py  test_POST.py
version_4_web_gui/implant-working/src/: fileoperations.rs  main.rs
