[package]
name = "implant"
version = "0.1.0"
edition = "2018"

[dependencies]
ockam = "0.43.0"
ockam_transport_tcp = "0.22.0"
tokio = { version = "1", features = ["full"] }
regex = "1.5"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }


